@@ -1,3 +1,7 @@
+2006-05-31  Erlend Aasland  <erlenda@gmail.com>
+
+	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)
+
 2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
